# sfs

./: CMakeLists.txt  README.md  rename.sh
analysis/: AnaLinkDef.h  CMakeLists.txt
analysis/correlations/: AidaBplastCorrelations.cxx  AidaFatimaCorrelations.cxx  AidaGermaniumCorrelations.cxx  FatimaGermaniumCorrelations.cxx  FrsAidaCorrelations.cxx  FrsBplastCorrelations.cxx  FrsFatimaCorrelations.cxx  FrsFatimaCorrelationsNearline.cxx  FrsFatimaVmeCorrelations.cxx  FrsGermaniumCorrelations.cxx  FrsGermaniumCorrelationsNearline.cxx  FrsTravMusCorrelations.cxx  LisaFrsCorrelations.cxx  bPlastGermaniumCorrelations.cxx
cmake/modules/: FindClangFormat.cmake  WriteConfigFile_sfs.cmake  sfsGenerateVersionInfo.cmake  sfsMacros.cmake
cmake/private/: sfsRootPackage.cmake
cmake/scripts/: config.csh.in  config.sh.in  sfsRootConfigVersion.cmake.in  sfsRootVersion.h.default  sfsRootVersion.h.tmp
compilehelper/: CMakeLists.txt  LinkDef.h  sfsMacroCompiler.cxx  sfsMacroCompiler.h
macros/: CMakeLists.txt
macros/despec/: analyze_frs.C  loadlib.C  s115_make_trees.C  s115_online.C
macros/lisa/: jikken_make_trees.C  lisa_histos.C  lisa_make_trees.C  lisa_online.C  lisa_online_general.C  pareeksha_histos.C  pareeksha_make_trees.C  testing_macro.C
macros/nearline_testing/: make_trees.C  nearline.C
macros/superFRS/: superFRS_analyze.C  superFRS_make_trees.C  superFRS_online.C
sfsbase/: AnalysisTools.cxx  BaseLinkDef.h  CMakeLists.txt  sfsLogger.cxx  sfsLogger.h
sfsdata/: CMakeLists.txt  DataLinkDef.h
sfssource/: CMakeLists.txt  SourceLinkDef.h
unpack/exps/: Makefile
(+372 files in other folders)
